include/maplibre_native_c/map.h

/** UTF-8 text view. The pointer may be null only when size is 0. */
typedef struct mln_string_view {
  /** UTF-8 bytes. Null only when size is 0. */
  const char* data;
  size_t size;
} mln_string_view;
typedef struct mln_json_value mln_json_value;
/** JSON value array view. */
typedef struct mln_json_array {
  /** Values. Null only when value_count is 0. */
  const mln_json_value* values;
  size_t value_count;
} mln_json_array;
/** JSON object member array view. */
typedef struct mln_json_object {
  /** Members. Null only when member_count is 0. */
  const mln_json_member* members;
  size_t member_count;
} mln_json_object;
/**
 * JSON-like value input descriptor graph used by feature properties/states.
 *
 * Input functions reject NaN and infinities for double values because JSON and
 * GeoJSON numbers are finite.
 * A root JSON value descriptor starts at nesting depth 0. Status-returning
 * functions reject array/object children past depth 64 with
 * MLN_STATUS_INVALID_ARGUMENT.
 */
typedef struct mln_json_value {
  uint32_t size;
  /** One of mln_json_value_type. */
  uint32_t type;
  union {
    bool bool_value;
    uint64_t uint_value;
    int64_t int_value;
    double double_value;
    mln_string_view string_value;
    mln_json_array array_value;
    mln_json_object object_value;
  } data;
} mln_json_value;