bindings/dart/lib/src/internal/c/maplibre_native_c.g.dart


  static ffi.Pointer<mln_render_target_extent> $allocate(
    ffi.Allocator $allocator, {
    required int size,
    required int width,
    required int height,
    required double scale_factor,
  }) => $allocator<mln_render_target_extent>()
    ..ref.size = size
    ..ref.width = width
    ..ref.height = height
    ..ref.scale_factor = scale_factor;
}

enum mln_rendered_feature_query_option_field {
  MLN_RENDERED_FEATURE_QUERY_OPTION_LAYER_IDS(1);

  final int value;
  const mln_rendered_feature_query_option_field(this.value);

  static mln_rendered_feature_query_option_field fromValue(int value) =>
      switch (value) {
        1 => MLN_RENDERED_FEATURE_QUERY_OPTION_LAYER_IDS,
        _ => throw ArgumentError(
          'Unknown value for mln_rendered_feature_query_option_field: $value',
        ),
      };
}

final class mln_rendered_feature_query_options extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  @ffi.Uint32()
  external int fields;

  external ffi.Pointer<mln_string_view> layer_ids;

  @ffi.Size()
  external int layer_id_count;

  external ffi.Pointer<mln_json_value> filter;

  static ffi.Pointer<mln_rendered_feature_query_options> $allocate(
    ffi.Allocator $allocator, {
    required int size,
    required int fields,
    required ffi.Pointer<mln_string_view> layer_ids,
    required int layer_id_count,
    required ffi.Pointer<mln_json_value> filter,
  }) => $allocator<mln_rendered_feature_query_options>()
    ..ref.size = size
    ..ref.fields = fields
    ..ref.layer_ids = layer_ids
    ..ref.layer_id_count = layer_id_count
    ..ref.filter = filter;
}

final class mln_rendered_query_geometry extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  @ffi.Uint32()
  external int type;

  external UnnamedUnion$7 data;
}

enum mln_rendered_query_geometry_type {
  MLN_RENDERED_QUERY_GEOMETRY_TYPE_POINT(1),
  MLN_RENDERED_QUERY_GEOMETRY_TYPE_BOX(2),
  MLN_RENDERED_QUERY_GEOMETRY_TYPE_LINE_STRING(3);

  final int value;
  const mln_rendered_query_geometry_type(this.value);

  static mln_rendered_query_geometry_type fromValue(int value) =>
      switch (value) {
        1 => MLN_RENDERED_QUERY_GEOMETRY_TYPE_POINT,
        2 => MLN_RENDERED_QUERY_GEOMETRY_TYPE_BOX,
        3 => MLN_RENDERED_QUERY_GEOMETRY_TYPE_LINE_STRING,
        _ => throw ArgumentError(
          'Unknown value for mln_rendered_query_geometry_type: $value',
        ),
      };
}

final class mln_rendering_stats extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  @ffi.Double()
  external double encoding_time;

  @ffi.Double()
  external double rendering_time;

  @ffi.Int64()
  external int frame_count;

  @ffi.Int64()
  external int draw_call_count;

  @ffi.Int64()
  external int total_draw_call_count;

  static ffi.Pointer<mln_rendering_stats> $allocate(
    ffi.Allocator $allocator, {
    required int size,
    required double encoding_time,
    required double rendering_time,
    required int frame_count,
    required int draw_call_count,
    required int total_draw_call_count,
  }) => $allocator<mln_rendering_stats>()
    ..ref.size = size
    ..ref.encoding_time = encoding_time
    ..ref.rendering_time = rendering_time
    ..ref.frame_count = frame_count
    ..ref.draw_call_count = draw_call_count
    ..ref.total_draw_call_count = total_draw_call_count;
}

enum mln_resource_error_reason {
  MLN_RESOURCE_ERROR_REASON_NONE(0),
  MLN_RESOURCE_ERROR_REASON_NOT_FOUND(1),
  MLN_RESOURCE_ERROR_REASON_SERVER(2),
  MLN_RESOURCE_ERROR_REASON_CONNECTION(3),
  MLN_RESOURCE_ERROR_REASON_RATE_LIMIT(4),
  MLN_RESOURCE_ERROR_REASON_OTHER(5);

  final int value;
  const mln_resource_error_reason(this.value);

  static mln_resource_error_reason fromValue(int value) => switch (value) {
    0 => MLN_RESOURCE_ERROR_REASON_NONE,
    1 => MLN_RESOURCE_ERROR_REASON_NOT_FOUND,
    2 => MLN_RESOURCE_ERROR_REASON_SERVER,
    3 => MLN_RESOURCE_ERROR_REASON_CONNECTION,
    4 => MLN_RESOURCE_ERROR_REASON_RATE_LIMIT,
    5 => MLN_RESOURCE_ERROR_REASON_OTHER,
    _ => throw ArgumentError(
      'Unknown value for mln_resource_error_reason: $value',
    ),
  };
}

enum mln_resource_kind {
  MLN_RESOURCE_KIND_UNKNOWN(0),
  MLN_RESOURCE_KIND_STYLE(1),
  MLN_RESOURCE_KIND_SOURCE(2),
  MLN_RESOURCE_KIND_TILE(3),
  MLN_RESOURCE_KIND_GLYPHS(4),
  MLN_RESOURCE_KIND_SPRITE_IMAGE(5),
  MLN_RESOURCE_KIND_SPRITE_JSON(6),
  MLN_RESOURCE_KIND_IMAGE(7);

  final int value;
  const mln_resource_kind(this.value);

  static mln_resource_kind fromValue(int value) => switch (value) {
    0 => MLN_RESOURCE_KIND_UNKNOWN,
    1 => MLN_RESOURCE_KIND_STYLE,
    2 => MLN_RESOURCE_KIND_SOURCE,
    3 => MLN_RESOURCE_KIND_TILE,
    4 => MLN_RESOURCE_KIND_GLYPHS,
    5 => MLN_RESOURCE_KIND_SPRITE_IMAGE,
    6 => MLN_RESOURCE_KIND_SPRITE_JSON,
    7 => MLN_RESOURCE_KIND_IMAGE,
    _ => throw ArgumentError('Unknown value for mln_resource_kind: $value'),
  };
}

enum mln_resource_loading_method {
  MLN_RESOURCE_LOADING_METHOD_ALL(0),
  MLN_RESOURCE_LOADING_METHOD_CACHE_ONLY(1),
  MLN_RESOURCE_LOADING_METHOD_NETWORK_ONLY(2);

  final int value;
  const mln_resource_loading_method(this.value);

  static mln_resource_loading_method fromValue(int value) => switch (value) {
    0 => MLN_RESOURCE_LOADING_METHOD_ALL,
    1 => MLN_RESOURCE_LOADING_METHOD_CACHE_ONLY,
    2 => MLN_RESOURCE_LOADING_METHOD_NETWORK_ONLY,
    _ => throw ArgumentError(
      'Unknown value for mln_resource_loading_method: $value',
    ),
  };
}

enum mln_resource_priority {
  MLN_RESOURCE_PRIORITY_REGULAR(0),
  MLN_RESOURCE_PRIORITY_LOW(1);

  final int value;
  const mln_resource_priority(this.value);

  static mln_resource_priority fromValue(int value) => switch (value) {
    0 => MLN_RESOURCE_PRIORITY_REGULAR,
    1 => MLN_RESOURCE_PRIORITY_LOW,
    _ => throw ArgumentError('Unknown value for mln_resource_priority: $value'),
  };
}

final class mln_resource_provider extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  external mln_resource_provider_callback callback;

  external ffi.Pointer<ffi.Void> user_data;

  static ffi.Pointer<mln_resource_provider> $allocate(
    ffi.Allocator $allocator, {
    required int size,
    required mln_resource_provider_callback callback,
    required ffi.Pointer<ffi.Void> user_data,
  }) => $allocator<mln_resource_provider>()
    ..ref.size = size
    ..ref.callback = callback
    ..ref.user_data = user_data;
}

typedef mln_resource_provider_callback =
    ffi.Pointer<ffi.NativeFunction<mln_resource_provider_callbackFunction>>;
typedef mln_resource_provider_callbackFunction =
    ffi.Uint32 Function(
      ffi.Pointer<ffi.Void> user_data,
      ffi.Pointer<mln_resource_request> request,
      mln_resource_request_handle handle,
    );
typedef Dartmln_resource_provider_callbackFunction =
    int Function(
      ffi.Pointer<ffi.Void> user_data,
      ffi.Pointer<mln_resource_request> request,
      Dartmln_resource_request_handle handle,
    );

enum mln_resource_provider_decision {
  MLN_RESOURCE_PROVIDER_DECISION_PASS_THROUGH(0),
  MLN_RESOURCE_PROVIDER_DECISION_HANDLE(1);

  final int value;
  const mln_resource_provider_decision(this.value);

  static mln_resource_provider_decision fromValue(int value) => switch (value) {
    0 => MLN_RESOURCE_PROVIDER_DECISION_PASS_THROUGH,
    1 => MLN_RESOURCE_PROVIDER_DECISION_HANDLE,
    _ => throw ArgumentError(
      'Unknown value for mln_resource_provider_decision: $value',
    ),
  };
}

final class mln_resource_request extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  external ffi.Pointer<ffi.Char> requested_url;

  external ffi.Pointer<ffi.Char> resolved_url;

  @ffi.Uint32()
  external int kind;

  @ffi.Uint32()
  external int loading_method;

  @ffi.Uint32()
  external int priority;

  @ffi.Uint32()
  external int usage;

  @ffi.Uint32()
  external int storage_policy;

  @ffi.Bool()
  external bool has_range;

  @ffi.Uint64()
  external int range_start;

  @ffi.Uint64()
  external int range_end;

  @ffi.Bool()
  external bool has_prior_modified;

  @ffi.Int64()
  external int prior_modified_unix_ms;

  @ffi.Bool()
  external bool has_prior_expires;

  @ffi.Int64()
  external int prior_expires_unix_ms;

  external ffi.Pointer<ffi.Char> prior_etag;

  external ffi.Pointer<ffi.Uint8> prior_data;

  @ffi.Size()
  external int prior_data_size;

  static ffi.Pointer<mln_resource_request> $allocate(
    ffi.Allocator $allocator, {
    required int size,
    required ffi.Pointer<ffi.Char> requested_url,
    required ffi.Pointer<ffi.Char> resolved_url,
    required int kind,
    required int loading_method,
    required int priority,
    required int usage,
    required int storage_policy,
    required bool has_range,
    required int range_start,
    required int range_end,
    required bool has_prior_modified,
    required int prior_modified_unix_ms,
    required bool has_prior_expires,
    required int prior_expires_unix_ms,
    required ffi.Pointer<ffi.Char> prior_etag,
    required ffi.Pointer<ffi.Uint8> prior_data,
    required int prior_data_size,
  }) => $allocator<mln_resource_request>()
    ..ref.size = size
    ..ref.requested_url = requested_url
    ..ref.resolved_url = resolved_url
    ..ref.kind = kind
    ..ref.loading_method = loading_method
    ..ref.priority = priority
    ..ref.usage = usage
    ..ref.storage_policy = storage_policy
    ..ref.has_range = has_range
    ..ref.range_start = range_start
    ..ref.range_end = range_end
    ..ref.has_prior_modified = has_prior_modified
    ..ref.prior_modified_unix_ms = prior_modified_unix_ms
    ..ref.has_prior_expires = has_prior_expires
    ..ref.prior_expires_unix_ms = prior_expires_unix_ms
    ..ref.prior_etag = prior_etag
    ..ref.prior_data = prior_data
    ..ref.prior_data_size = prior_data_size;
}

typedef mln_resource_request_handle = ffi.Uint64;
typedef Dartmln_resource_request_handle = int;

final class mln_resource_response extends ffi.Struct {
  @ffi.Uint32()
  external int size;

  @ffi.Uint32()
  external int status;

  @ffi.Uint32()
  external int error_reason;

  external ffi.Pointer<ffi.Uint8> bytes;

  @ffi.Size()
  external int byte_count;

  external ffi.Pointer<ffi.Char> error_message;

  @ffi.Bool()
  external bool must_revalidate;

  @ffi.Bool()
  external bool has_modified;

  @ffi.Int64()
  external int modified_unix_ms;

  @ffi.Bool()
  external bool has_expires;

  @ffi.Int64()
  external int expires_unix_ms;

  external ffi.Pointer<ffi.Char> etag;

  @ffi.Bool()
  external bool has_retry_after;

  @ffi.Int64()
  external int retry_after_unix_ms;

  static ffi.Pointer<mln_resource_response> $allocate(
    ffi.Allocator $allocator, {
    required int size,
    required int status,
    required int error_reason,
    required ffi.Pointer<ffi.Uint8> bytes,
    required int byte_count,
    required ffi.Pointer<ffi.Char> error_message,
    required bool must_revalidate,
    required bool has_modified,
    required int modified_unix_ms,
    required bool has_expires,
    required int expires_unix_ms,
    required ffi.Pointer<ffi.Char> etag,
    required bool has_retry_after,
    required int retry_after_unix_ms,
  }) => $allocator<mln_resource_response>()
    ..ref.size = size
    ..ref.status = status
    ..ref.error_reason = error_reason
    ..ref.bytes = bytes
    ..ref.byte_count = byte_count
    ..ref.error_message = error_message
    ..ref.must_revalidate = must_revalidate
    ..ref.has_modified = has_modified
    ..ref.modified_unix_ms = modified_unix_ms
    ..ref.has_expires = has_expires
    ..ref.expires_unix_ms = expires_unix_ms
    ..ref.etag = etag
    ..ref.has_retry_after = has_retry_after
    ..ref.retry_after_unix_ms = retry_after_unix_ms;
}

enum mln_resource_response_status {
  MLN_RESOURCE_RESPONSE_STATUS_OK(0),
  MLN_RESOURCE_RESPONSE_STATUS_ERROR(1),
  MLN_RESOURCE_RESPONSE_STATUS_NO_CONTENT(2),
  MLN_RESOURCE_RESPONSE_STATUS_NOT_MODIFIED(3);

  final int value;
  const mln_resource_response_status(this.value);
